# netcat

./: .gitignore  DESIGN.md  HACKING.md  README.md  TODO.md  cert.pem  key.pem  meson.build  meson_options.txt  netcat.c
.github/workflows/: ci.yml
compat/: openbsd_compat.c  openbsd_compat.h  tls.h  tls_compat.c
man/: nc.1
mbedtls/configs/: config-ccm-psk-dtls1_2.h  config-ccm-psk-tls1_2.h  config-suite-b.h  crypto-config-ccm-psk-tls1_2.h  crypto-config-suite-b.h  crypto-config-thread.h
mbedtls/configs/ext/: tfm_mbedcrypto_config_profile_medium.h
mbedtls/framework/psasim/include/psa/: client.h  service.h
mbedtls/framework/psasim/include/psasim/: init.h
mbedtls/framework/psasim/src/: client.c
mbedtls/framework/psasim/test/: server.c
mbedtls/framework/tests/include/test/: asn1_helpers.h  bignum_helpers.h  helpers.h  macros.h  memory.h  psa_crypto_helpers.h  psa_exercise_key.h  random.h  threading_helpers.h
mbedtls/framework/tests/programs/: metatest.c  query_config.h  query_included_headers.c
mbedtls/framework/tests/src/: bignum_codepath_check.c  bignum_helpers.c  psa_crypto_helpers.c  psa_crypto_stubs.c  psa_exercise_key.c  random.c  test_memory.c  threading_helpers.c
mbedtls/framework/tests/src/drivers/: hash.c  test_driver_aead.c  test_driver_cipher.c  test_driver_pake.c  test_driver_signature.c
mbedtls/include/mbedtls/: build_info.h  debug.h  error.h  mbedtls_config.h  net_sockets.h  oid.h  pkcs7.h  ssl.h  ssl_cache.h  ssl_ciphersuites.h  ssl_cookie.h  ssl_ticket.h  timing.h  version.h  x509.h  x509_crl.h  x509_crt.h  x509_csr.h
mbedtls/include/mbedtls/private/: config_adjust_ssl.h  config_adjust_x509.h
mbedtls/programs/fuzz/: fuzz_client.c  fuzz_dtlsclient.c  fuzz_dtlsserver.c  fuzz_pkcs7.c  fuzz_server.c  fuzz_x509crl.c  fuzz_x509crt.c  fuzz_x509csr.c
mbedtls/programs/ssl/: dtls_client.c  dtls_server.c  mini_client.c  ssl_client1.c  ssl_client2.c  ssl_context_info.c  ssl_fork_server.c  ssl_mail_client.c  ssl_pthread_server.c  ssl_server.c  ssl_server2.c  ssl_test_common_source.c  ssl_test_lib.c  ssl_test_lib.h
mbedtls/programs/test/: dlopen.c  selftest.c  udp_proxy.c
mbedtls/programs/test/cmake_package/: cmake_package.c
mbedtls/programs/test/cmake_package_install/: cmake_package_install.c
mbedtls/programs/test/cmake_subproject/: cmake_subproject.c
mbedtls/programs/util/: pem2der.c  strerror.c
mbedtls/programs/x509/: cert_app.c  cert_req.c  cert_write.c  crl_app.c  load_roots.c  req_app.c
mbedtls/tests/include/test/: certs.h  ssl_helpers.h
mbedtls/tests/src/: certs.c
mbedtls/tests/src/test_helpers/: ssl_helpers.c
mbedtls/tf-psa-crypto/configs/: crypto-config-ccm-aes-sha256.h  crypto-config-symmetric-only.h
mbedtls/tf-psa-crypto/configs/ext/: crypto_config_profile_medium.h
mbedtls/tf-psa-crypto/core/: alignment.h  psa_crypto.c  psa_crypto_client.c  psa_crypto_core.h  psa_crypto_core_common.h  psa_crypto_driver_wrappers_no_static.h  psa_crypto_invasive.h  psa_crypto_its.h  psa_crypto_random_impl.h  psa_crypto_slot_management.c  psa_crypto_slot_management.h  psa_crypto_storage.c  psa_crypto_storage.h  psa_its_file.c  tf_psa_crypto_check_config.h  tf_psa_crypto_common.h  tf_psa_crypto_version.c
mbedtls/tf-psa-crypto/drivers/everest/: Makefile.inc
mbedtls/tf-psa-crypto/drivers/p256-m/: Makefile.inc  p256-m_driver_entrypoints.c  p256-m_driver_entrypoints.h
mbedtls/tf-psa-crypto/include/mbedtls/: asn1.h  asn1write.h  base64.h  compat-3-crypto.h  constant_time.h  lms.h  md.h  memory_buffer_alloc.h  nist_kw.h  pem.h  pk.h  platform.h  platform_time.h  platform_util.h  psa_util.h  threading.h
mbedtls/tf-psa-crypto/include/psa/: crypto.h  crypto_compat.h  crypto_config.h  crypto_driver_common.h  crypto_driver_contexts_composites.h  crypto_driver_contexts_key_derivation.h  crypto_driver_contexts_primitives.h  crypto_driver_random.h  crypto_extra.h  crypto_platform.h  crypto_sizes.h  crypto_struct.h  crypto_values.h
mbedtls/tf-psa-crypto/include/tf-psa-crypto/: build_info.h  version.h
mbedtls/tf-psa-crypto/programs/fuzz/: fuzz_common.c  fuzz_common.h  fuzz_onefile.c  fuzz_privkey.c  fuzz_pubkey.c
mbedtls/tf-psa-crypto/programs/psa/: aead_demo.c  crypto_examples.c  hmac_demo.c  key_ladder_demo.c  psa_constant_names.c  psa_hash.c
mbedtls/tf-psa-crypto/programs/test/: benchmark.c  tfpsacrypto_dlopen.c  which_aes.c
mbedtls/tf-psa-crypto/scripts/: generate_driver_wrappers.py
mbedtls/tf-psa-crypto/tests/configs/: crypto_config_test_driver.h  crypto_config_test_driver_extension.h  user-config-for-test.h  user-config-malloc-0-null.h  user-config-test-driver-extension.h
mbedtls/tf-psa-crypto/tests/src/: psa_test_wrappers.c
netcat-openbsd/: atomicio.c  atomicio.h  netcat.c  socks.c
scripts/: bsh  dist.sh  irc  iscan  ncp  probe  web  webproxy  webrelay
src/: bpf.c  bpf.h  bpf_evasion.bpf.c  bpf_xdp.bpf.c  config.h  connect.c  connect.h  exec.c  exec.h  hexdump.c  hexdump.h  io.c  io_pump.c  io_pump.h  log.c  main.c  nc_ctx.c  nc_ctx.h  netcat.c  netcat.h  network.c  pcap.c  pcap.h  proxy_proto.c  proxy_proto.h  quic.c  quic.h  resolve.c  resolve.h  socks.c  syscalls.h  telnet.c  telnet.h  tls.c  tls.h  tls_compat.c  utils.c  version.h.in
tests/: atomicio_test.c  bpf_failure_test.c  bpf_filter.c  cli_abstract_unix_loopback.py  cli_abstract_unix_udp_loopback.py  cli_argument_test.py  cli_bpf_test.py  cli_buffer_limits.py  cli_conflict_matrix.py  cli_connect_timeout.py  cli_dtls_test.py  cli_error_propagation.py  cli_exec_features.py  cli_exec_test.py  cli_failures.py  cli_fuzzer.py  cli_hexdump_test.py  cli_interval_pacing.py  cli_json_output.py  cli_netpair_test.py  cli_pcap_test.py  cli_performance_opts.py  cli_proxy_proto_edge_cases.py  cli_proxy_proto_test.py  cli_quic_probe.py  cli_quit_after_eof.py  cli_socks_test.py  cli_splice.py  cli_tcp_loopback.py  cli_udp_interval_pacing.py  cli_udp_loopback.py  cli_udp_quit_after_eof.py  cli_unix_loopback.py  deterministic_clock.py  doc_source_routing_removed.py  exec_helper.c  io_pump_test.c  io_shaping_test.c  meson.build  netpair.py  (+10 more)
(+214 files in other folders)
